--- a/css/home.css
+++ b/css/home.css
@@ -247,18 +247,24 @@ display:block;
     justify-content: space-around;
     
   } */
-  .footer {
-    padding: 15px;
-    text-align: center;
+  footer {
+    padding: -2px;
     color: white;
+    text-align: center;
     margin-top: 20px; 
     /*transform: translateY(-983%);*/
     letter-spacing: 2em;
     background-color: #333;
 }
+.wrapper{
+    padding: 5px;
+    max-width: 960px;
+    width: 95%;
+    margin: 20px auto;
+}
 .img4 {
-    background-image: url(https://png.pngtree.com/element_origin_min_pic/17/09/16/fc3025dc83a723d3a245523ebdb954a0.jpg);
-    background-size: contain;
+    background-image: url("../image/iphone for repair.png");
+    background-size: contain;  
     background-repeat: no-repeat;
     background-position: center;
     height: 450px;
