--- a/css/home.css
+++ b/css/home.css
@@ -247,53 +247,43 @@ display:block;
     justify-content: space-around;
     
   } */
-  footer {
-    padding: -2px;
-    color: white;
-    text-align: center;
-    margin-top: 20px; 
-    /*transform: translateY(-983%);*/
-    letter-spacing: 2em;
-    background-color: WHITE;
-}
-.wrapper{
-    padding: 5px;
-    max-width: 960px;
-    width: 95%;
-    margin: 20px auto;
-}
-.img4 {
-    background-image: url("../image/iphone for repair.png");
-    background-size: contain;  
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 450px;
-    width: 100%;
-
-
-}
-#underline {
-    text-decoration: underline;
-    font-weight: bold;
-}
- /*.img5 {
-     background-image: url(https://media.mercola.com/assets/images/shop/low-price-badge.png);
-     background-size: contain;
-     background-repeat: no-repeat;
-     background-position: center;
-     height: 150px;
-     width: 100%;
-     float: left;
- }
- */
- 
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {   
-      width: 100%;
-      padding: 0;
+  .wrapper{
+      padding: 5px;
+      max-width: 960px;
+      width: 95%;
+      margin: 20px auto;
     }
-  } 
+    .img4 {
+        background-image: url("../image/iphone for repair.png");
+        background-size: contain;  
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 450px;
+        width: 100%;
+        
+        
+    }
+    #underline {
+        text-decoration: underline;
+        font-weight: bold;
+    }
+    /*.img5 {
+        background-image: url(https://media.mercola.com/assets/images/shop/low-price-badge.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 150px;
+        width: 100%;
+        float: left;
+    }
+    */
+    
+    footer {
+      padding: -2px;
+      background-color: white;
+      text-align: center;
+      margin-top: 20px; 
+      /*transform: translateY(-983%);*/
+    }
 
   
