--- a/css/home.css
+++ b/css/home.css
@@ -150,6 +150,7 @@ flex-direction: column;
     flex: 1;
     margin-bottom: 20px;
     background-color: #fff;
+    text-align: center;
 
 }
 .second-b {
@@ -204,16 +205,7 @@ flex-direction: column;
       border-style: groove;
       border-radius: 5em;
     }
-    .firstimg {
-      background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrrF23IZwwHEBAWMyu7Dty5QJvZ4_HqBg7XMZRVwa0vKll87dO);
-      width: 100%;
-      height: 180%;
-      padding-bottom: 20%;
-      margin-right: 32px;
-      background-repeat: no-repeat;
-      background-position: center;
-      display: flex;
-    }
+
     /*style the paragraphs in the right column*/
   #fancyp{
     font-family: 'Abril Fatface';
@@ -231,58 +223,20 @@ flex-direction: column;
       line-height: 1.5em;
   } 
   
-  /*.img3{
-   background-image: url(https://irp-cdn.multiscreensite.com/d708ae7e/dms3rep/multi/mobile/1-Logo_PhoneDoctor.png);
-   height: 569px;
-    margin-left: -60px;
-    /* padding-right: 12%; */
-    /* width: 100%; */
-    /*background-repeat: no-repeat;
-    background-position: center;
-
+  .img3{
+        margin-right: 32px;
   }
 
-  /*.leftcolumn {   
-   float: left;
-    width: 56%;
-  }
-  
-  /* Right column */
-  /*.rightcolumn {
-    float: right;
-    width: 42.3%;
-    padding: 0 0px;
-    padding-left: 1.7%;
-    /*margin: 280px -97px 40px 35px;*/
-  /*.card {
-    background-color: white;
-    padding: 20px;
-    margin-top: 17px;
-  }*/
-  /*.row {
-    display: inline-block;
-  }
-   .row:after {
-    padding: 0;
-    margin: 0;
-    
-    -webkit-flex-flow: row wrap;
-    justify-content: space-around;
-    
-  } */
   .wrapper{
       padding: 5px;
       max-width: 960px;
       width: 100%;
       margin: 20px auto;
-    } */
+    } 
     .img4 {
-        background-image: url("../image/iphone for repair.png");
-        background-size: contain;  
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 450px;
         width: 100%;
+        height: 80%;
+        margin-right: 32px;
         
         
     }
