--- a/css/home.css
+++ b/css/home.css
@@ -137,8 +137,8 @@ display:block;
     flex: 1;
     background-color: #fff;
     padding: 20px;
-    margin-right: 20px;
-    
+    margin-right: 20px;   
+    margin-bottom: 39.5%;
 }
 
 .second {
@@ -225,6 +225,8 @@ flex-direction: column;
   
   .img3{
         margin-right: 32px;
+        width: 100%;
+        height: 80%;
   }
 
   .wrapper{
@@ -234,11 +236,12 @@ flex-direction: column;
       margin: 20px auto;
     } 
     .img4 {
-        width: 100%;
-        height: 80%;
-        margin-right: 32px;
-        
-        
+    background-image: url(../image/iphone for repair.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 450px;
+    width: 100%;
     }
     #underline {
         text-decoration: underline;
@@ -255,11 +258,12 @@ flex-direction: column;
     }
     */
     
-    /*footer {
+    footer {
       padding: -2px;
       background-color: white;
       text-align: center;
       margin-top: 20px; 
+    }
       /*transform: translateY(-983%);
     }
     /*@media screen and (min-width: 600px) {
