--- a/css/home.css
+++ b/css/home.css
@@ -141,6 +141,11 @@ display:block;
     margin-bottom: 39.5%;
 }
 
+.img3{
+      margin-right: 32px;
+      width: 100%;
+      height: 80%;
+}
 .second {
 display: flex;
 flex: 1;
@@ -223,18 +228,13 @@ flex-direction: column;
       line-height: 1.5em;
   } 
   
-  .img3{
-        margin-right: 32px;
-        width: 100%;
-        height: 80%;
-  }
 
-  .wrapper{
+  /*.wrapper{
       padding: 5px;
       max-width: 960px;
       width: 100%;
       margin: 20px auto;
-    } 
+    } */
     .img4 {
     background-image: url(../image/iphone for repair.png);
     background-size: contain;
@@ -243,6 +243,7 @@ flex-direction: column;
     height: 450px;
     width: 100%;
     }
+
     #underline {
         text-decoration: underline;
         font-weight: bold;
@@ -258,11 +259,12 @@ flex-direction: column;
     }
     */
     
-    footer {
+    .footer-container {
       padding: -2px;
       background-color: white;
       text-align: center;
       margin-top: 20px; 
+      display: flex;
     }
       /*transform: translateY(-983%);
     }
