using flex box for the home page

--- a/css/home.css
+++ b/css/home.css
@@ -229,18 +229,12 @@ flex-direction: column;
   } 
   
 
-  /*.wrapper{
-      padding: 5px;
-      max-width: 960px;
-      width: 100%;
-      margin: 20px auto;
-    } */
     .img4 {
     background-image: url(../image/iphone for repair.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 450px;
+    height: 250px;
     width: 100%;
     }
 
@@ -266,6 +260,45 @@ flex-direction: column;
       margin-top: 20px; 
       display: flex;
     }
+
+    @media (min-width: 600px) {
+        .column-layout-container {
+            display: flex;
+            margin: 0 auto;
+            justify-content: space-between;
+        }
+            .first {
+                flex: 1;
+                background-color: #fff;
+                padding: 20px;
+                margin-right: 20px;   
+                margin-bottom: 39.5%;
+            }
+            
+            .img3{
+                  margin-right: 32px;
+                  width: 100%;
+                  height: 80%;
+            }
+            .second {
+            display: flex;
+            flex: 1;
+            flex-direction: column;
+            }
+            .second-a {
+                flex: 1;
+                margin-bottom: 20px;
+                background-color: #fff;
+                text-align: center;
+            
+            }
+            .second-b {
+                background-color:#fff;
+                flex: 1;
+                margin-bottom: 20px;
+                
+            }
+        }
       /*transform: translateY(-983%);
     }
     /*@media screen and (min-width: 600px) {
