--- a/css/home.css
+++ b/css/home.css
@@ -19,6 +19,18 @@ body {
     width: 100%;
 }
 
+.logo {
+    width: 300px;
+    float: left;
+    overflow: auto;
+}
+
+.contact-info {
+    width: calc(100% - 301px);
+    text-align: right;
+    float: right;
+}
+
 ul {
     margin: 0px;
     padding: 0px;
@@ -111,8 +123,8 @@ a {
     font-family: arial;
     color: #fff;
     text-decoration: none;
-    width: 100%;
-    height: 70px;
+    /* width: 100%; */
+    /* height: 70px; */
     text-align: center;
 }
 
@@ -244,6 +256,20 @@ span {
     padding-bottom: 20%;
 }*/
 
+@media (max-width: 550px) {
+    .logo {
+        width: 100%;
+        float: none;
+        display: block;
+    }
+
+    .contact-info {
+        width: 100%;
+        float: none;
+        display: block;
+    }
+}
+
 @media (max-width: 600px) {
 
     .img5 {
@@ -354,7 +380,7 @@ span {
         top: 22px;
         position: relative;
     }
-    a {
+    /* a {
         display: block;
         position: absolute;
         float: left;
@@ -364,7 +390,7 @@ span {
         width: 100%;
         height: 70px;
         text-align: center;
-    }
+    } */
     span {
         margin-top: 25px;
         display: block;
