making everthing mobile responsive

--- a/css/home.css
+++ b/css/home.css
@@ -144,7 +144,7 @@ span {
     margin: 0 auto;
     flex-direction: row;
 }
-
+/*first column & first parent column*/
 .first {
     flex: 1;
     background-color: #fff;
@@ -159,8 +159,8 @@ span {
     height: 80%;
 }
 
-/*style the paragraphs in the right column*/
 
+/* styles the paragraphs uniquely*/
 #fancyp {
     font-family: 'Abril Fatface';
     font-style: normal;
@@ -169,20 +169,20 @@ span {
     line-height: 1.5em;
     color: #333;
 }
-
+/*parent*/
 .second {
     display: flex;
     flex: 1;
     flex-direction: column;
 }
-
+/*second-child column*/
 .second-a {
     flex: 1;
     margin-bottom: 20px;
     background-color: #fff;
     text-align: center;
 }
-
+/*style border of 2nd & 3rd child columns*/
 #about {
     font-family: 'Abril Fatface';
     text-align: center;
@@ -191,18 +191,18 @@ span {
     border-radius: 5em;
     font-size: 2em;
 }
-
+/*third child column */
 .second-b {
     background-color: #fff;
     flex: 1;
     margin-bottom: 20px;
 }
-
+/*underlines text and informs you that it is responsive*/
 #underline {
     text-decoration: underline;
     font-weight: bold;
 }
-
+/* makes font big and red*/
 #fix {
     color: red;
     font-size: 2em;
@@ -268,7 +268,7 @@ span {
         display: block;
     }
 }
-
+/*makes everything mobile responsive*/
 @media (max-width: 600px) {
     .img5 {
         float: center;
@@ -294,7 +294,7 @@ span {
         /* margin: auto; */
         background: rgba(17, 16, 16, 0.5)
     }
-    /* allows the text to be transparent */
+
     #img2 {
         opacity: 1;
         background-size: contain;
@@ -403,6 +403,7 @@ span {
         margin: 0 auto;
         flex-direction: column;
     }
+    /*first parent column*/
     .first {
         flex: 1;
         background-color: #fff;
@@ -416,6 +417,7 @@ span {
         width: 100%;
         height: 80%;
     }
+    /*second parent column*/
     .second {
         display: flex;
         flex: 1;
@@ -425,11 +427,13 @@ span {
         /* margin-top: -35%;
         margin-bottom: 39.5%; */
     }
+    /*second child column*/
     .second-a {
         flex: 1;
         background-color: #fff;
         text-align: center;
     }
+    /*third child column*/
     .second-b {
         background-color: #fff;
         flex: 1;
@@ -476,7 +480,7 @@ span {
         border-style: groove;
         border-width: thick;
     }
-    /*style the paragraphs in the right column*/
+    /*style the paragraphs in the  columns*/
     #fancyp {
         font-family: 'Abril Fatface';
         font-style: normal;
