--- a/css/home.css
+++ b/css/home.css
@@ -118,15 +118,16 @@ ul {
 
 a {
     display: block;
-    /* position: absolute; */
-    /* float: left; */
+    position: absolute;
+    float: left; 
     font-family: arial;
     color: #fff;
     text-decoration: none;
-    /* width: 100%; */
-    /* height: 70px; */
+    width: 100%; 
+    height: 70px; 
     text-align: center;
 }
+
 
 span {
     margin-top: 25px;
@@ -378,17 +379,17 @@ span {
         top: 22px;
         position: relative;
     }
-    /* a {
+    a {
         display: block;
-        position: absolute;
-        float: left;
+        /* position: absolute; */
+        /* float: left; */
         font-family: arial;
         color: #fff;
         text-decoration: none;
-        width: 100%;
-        height: 70px;
+        /* width: 100%; */
+        /* height: 70px; */
         text-align: center;
-    } */
+    }
     span {
         margin-top: 25px;
         display: block;
