--- a/css/home.css
+++ b/css/home.css
@@ -262,6 +262,7 @@ span {
         width: 100%;
         float: none;
         display: block;
+        padding-bottom: 75px;
     }
     .contact-info {
         width: 100%;
