--- a/css/Blog.css
+++ b/css/Blog.css
@@ -9,9 +9,8 @@ h1{
 
 iframe {
     width: 100%;
-    height: auto;
     margin-bottom: 2rem;
-    background-color: #333;
+    height: 14rem;
 }
 p{
     
