--- a/css/services.css
+++ b/css/services.css
@@ -12,7 +12,11 @@ h4 {
     font-size: 27px;
    margin-right: 33%;
 }
-
+.img5 {
+    position: relative;
+    float: left;
+    height: 97px;
+}
 h3 {
     text-align: center;
     font-family: Cambria, serif;
