changing service prices

--- a/css/services.css
+++ b/css/services.css
@@ -355,7 +355,7 @@ ul.accordion li.bg9 {
         background-image: url(https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone7/plus/iphone7-plus-gold-select-2016?wid=513&hei=556&fmt=jpeg&qlt=95&op_usm=0.5,0.5&.v=1472430108712);
     }
     ul.accordion li.bg5 {
-        background-image: url(https://trademe.tmcdn.co.nz/photoserver/full/909042584.jpg);
+        background-image: url(https://d11fuji4mn7bm2.cloudfront.net/media/cache/data/Apple/iPhone-6s-plus/iPhone-6s-plus-rose-gold-300x300.png);
     }
     ul.accordion li.bg6 {
         background-image: url(https://store.storeimages.cdn-apple.com/4981/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone7/plus/iphone7-plus-black-select-2016?wid=513&hei=556&fmt=jpeg&qlt=95&op_usm=0.5,0.5&.v=1472430090682);
